--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
+    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   }
 }
